[gd_scene load_steps=5 format=3 uid="uid://c1wexe0cy3212"]

[ext_resource type="Script" path="res://src/world/objects/Enemy.gd" id="1_bgkwr"]
[ext_resource type="Texture2D" uid="uid://dlcoro0v2fcft" path="res://src/world/assets/graphics/enemy.png" id="2_5slqu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1mxje"]
radius = 49.0
height = 148.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1hfu0"]
radius = 57.0
height = 170.0

[node name="Enemy" type="AnimatableBody2D"]
collision_layer = 0
collision_mask = 0
sync_to_physics = false
script = ExtResource("1_bgkwr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5slqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1mxje")

[node name="PlayerKiller" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKiller"]
position = Vector2(3, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1hfu0")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="PlayerKiller" to="." method="_on_player_killer_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
